[tool.poetry]
name = "2023-02_oreilly_scraper"
version = "0.1.0"
description = ""
authors = ["fairy26 <yoshida-yosei-vx@ynu.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
PyPDF2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
